# rust-bootcamp

./: .gitignore  BOOTCAMP_COMPLETE.md  Cargo.toml  README.md  directory-progress.md  setup.bat  setup.sh
.devcontainer/: devcontainer.json
00-setup/: README.md  container-setup.md  macos-setup.md  vscode-configuration.md  windows-11-setup.md
01-foundations/: DEBUGGING_CHECKLIST.md  README.md
01-foundations/exercises/: ex01-hello-world.rs  ex02-types.rs  ex03-functions.rs  ex04-structs.rs  ex05-advanced-patterns.rs  ex05-advanced-text-analysis.rs
01-foundations/project-calculator/: Cargo.toml  README.md
01-foundations/reference/: README.md  csharp-comparisons.md  functions-flow-detailed.md  hello-rust-detailed.md  structs-enums-detailed.md  variables-types-detailed.md
02-ownership-and-borrowing/: 01-ownership-basics.md  02-borrowing-rules.md  03-lifetimes.md  04-smart-pointers.md  DEBUGGING_CHECKLIST.md  README.md  run_exercises.bat  run_exercises.sh
02-ownership-and-borrowing/exercises/: ex01-ownership.rs  ex02-borrowing.rs  ex03-lifetimes.rs  ex04-smart-pointers.rs  ex05-advanced-patterns.rs
02-ownership-and-borrowing/project-memory-visualizer/: Cargo.toml  README.md
02-ownership-and-borrowing/project-memory-visualizer/src/: borrowing_demo.rs  main.rs  memory_tracker.rs  ownership_demo.rs  smart_pointers.rs  visualizer.rs
02-ownership-and-borrowing/project-memory-visualizer/tests/: integration_tests.rs
02-ownership-and-borrowing/reference/: borrowing-rules-detailed.md  (+2 more)
03-error-handling/: 01-result-and-option.md  02-error-propagation.md  03-custom-errors.md  DEBUGGING_CHECKLIST.md  README.md
03-error-handling/project-file-processor/: Cargo.toml  LICENSE  README.md
03-error-handling/project-file-processor/benches/: processing_benchmark.rs
03-error-handling/project-file-processor/examples/: usage.rs
03-error-handling/project-file-processor/src/: config.rs  error.rs  lib.rs  main.rs  processor.rs  reporting.rs
03-error-handling/project-file-processor/src/formats/: csv.rs  json.rs  mod.rs  text.rs
03-error-handling/project-file-processor/tests/: cli_integration.rs  integration.rs
03-error-handling/project-file-processor/tests/test_files/: documentation.md  employees.csv  invalid.json  products.tsv  sample_data.jsonl  sample_users.json  simple.txt
04-systems-programming/: 01-memory-layout.md  02-unsafe-rust.md  03-ffi.md  DEBUGGING_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md
04-systems-programming/project-system-monitor/: Cargo.toml  README.md
04-systems-programming/project-system-monitor/solutions/: README.md  cpu.rs  main.rs  memory.rs
04-systems-programming/project-system-monitor/src/: cpu.rs  ffi.rs  main.rs  memory.rs  process.rs
04-systems-programming/project-system-monitor/tests/: integration.rs
05-concurrency/: 03-async-await.md  DEBUGGING_CHECKLIST.md  README.md
05-concurrency/project-web-scraper/: Cargo.toml  README.md
05-concurrency/project-web-scraper/src/: main.rs
05-concurrency/project-web-scraper/tests/: integration.rs
06-performance/: DEBUGGING_CHECKLIST.md  README.md
06-performance/project-optimization-challenge/: Cargo.toml  README.md
06-performance/project-optimization-challenge/benches/: image_processing_benchmarks.rs
06-performance/project-optimization-challenge/src/: allocator.rs  filters.rs  main.rs  pipeline.rs  processor.rs
06-performance/project-optimization-challenge/tests/: correctness_tests.rs
07-cli-tools/: DEBUGGING_CHECKLIST.md  README.md
07-cli-tools/exercises/: Cargo.toml  ex01-arg-parser.rs  ex02-error-handling.rs  ex03-config-files.rs  ex04-pipe-friendly.rs  ex05-progress-bars.rs  ex06-color-output.rs  ex07-cross-platform.rs  ex08-subcommands.rs
07-cli-tools/exercises/hints/: README.md  ex01-level1.md  ex01-level2.md  ex01-level3.md  ex02-level1.md  ex02-level2.md  ex02-level3.md  ex03-level1.md  ex03-level2.md  ex03-level3.md  ex04-level1.md  ex04-level2.md  ex04-level3.md  ex05-level1.md  ex05-level2.md  ex05-level3.md  ex06-level1.md  ex06-level2.md  ex06-level3.md  ex07-level1.md  ex07-level2.md  ex07-level3.md  ex08-level1.md  ex08-level2.md  ex08-level3.md  project-level1.md  project-level2.md  project-level3.md
07-cli-tools/project-dev-tools/: Cargo.toml  README.md
07-cli-tools/project-dev-tools/src/: error.rs  main.rs
07-cli-tools/project-dev-tools/src/commands/: file.rs  mod.rs
07-cli-tools/project-dev-tools/tests/: integration.rs
08-testing/: DEBUGGING_CHECKLIST.md  README.md
08-testing/project-testing-suite/: Cargo.toml  README.md
08-testing/project-testing-suite/src/: assertions.rs  async_helpers.rs  builders.rs  lib.rs  main.rs  mocks.rs  property.rs  reporting.rs
08-testing/project-testing-suite/tests/: framework_tests.rs
09-ecosystem/: DEBUGGING_CHECKLIST.md  README.md
09-ecosystem/project-crate-ecosystem/: Cargo.toml  README.md
09-ecosystem/project-crate-ecosystem/benches/: performance.rs
09-ecosystem/project-crate-ecosystem/examples/: usage.rs
09-ecosystem/project-crate-ecosystem/src/: lib.rs  main.rs
10-advanced-patterns/: DEBUGGING_CHECKLIST.md  README.md
10-advanced-patterns/project-advanced-macros/: Cargo.toml  README.md
10-advanced-patterns/project-advanced-macros/benches/: performance.rs
10-advanced-patterns/project-advanced-macros/examples/: integration_demo.rs
10-advanced-patterns/project-advanced-macros/macros/: Cargo.toml
10-advanced-patterns/project-advanced-macros/macros/src/: lib.rs
10-advanced-patterns/project-advanced-macros/src/: async_component.rs  lib.rs  unsafe_optimizations.rs
10-advanced-patterns/project-advanced-macros/src/components/: mod.rs
containers/: .bashrc  Dockerfile.dev  podman-compose.yml
final-project/: Cargo.toml  DEBUGGING_CHECKLIST.md  README.md
final-project/benches/: server_benchmarks.rs
final-project/hints/: project-level1.md  project-level2.md  project-level3.md
final-project/src/: main.rs
final-project/tests/: integration.rs
reference/: performance-comparisons.md
resources/: README.md  books.md  online-courses.md  rust-vs-csharp.md  troubleshooting.md
(+310 files in other folders)
