[package]
name = "memory-visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Rust Bootcamp Students"]
description = "A memory management visualizer demonstrating Rust's ownership model"

[[bin]]
name = "memory-visualizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
