[package]
name = "image-processor-optimization"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "image-processor"
path = "src/main.rs"

[dependencies]
rayon = "1.7"
image = "0.24"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

