[package]
name = "testing-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
# FIXME: Missing dependencies for testing framework!
# You'll need these for the complete implementation:
# mockall = "0.11"
# proptest = "1.0"
# tokio = { version = "1.0", features = ["full"] }
# tokio-stream = "0.1"
# serde_json = "1.0"

[dev-dependencies]
# FIXME: Add dev dependencies for testing the framework itself
# tokio-test = "0.4"

[[bin]]
name = "demo"
path = "src/main.rs"